@@ -4,25 +4,21 @@ import com.softserve.teachua.dto.category.CategoryProfile;
 import com.softserve.teachua.dto.center.CenterProfile;
 import com.softserve.teachua.dto.center.SuccessCreatedCenter;
 import com.softserve.teachua.dto.club.ClubProfile;
-import com.softserve.teachua.dto.databaseTransfer.ExcelConvertToFormatStringContactsData;
-import com.softserve.teachua.dto.databaseTransfer.ExcelParsingData;
-import com.softserve.teachua.dto.databaseTransfer.model.CategoryExcel;
-import com.softserve.teachua.dto.databaseTransfer.model.CenterExcel;
-import com.softserve.teachua.dto.databaseTransfer.model.ClubExcel;
-import com.softserve.teachua.dto.databaseTransfer.model.DistrictExcel;
-import com.softserve.teachua.dto.databaseTransfer.model.LocationExcel;
-import com.softserve.teachua.dto.databaseTransfer.model.StationExcel;
+import com.softserve.teachua.dto.database_transfer.ExcelConvertToFormatStringContactsData;
+import com.softserve.teachua.dto.database_transfer.ExcelParsingData;
+import com.softserve.teachua.dto.database_transfer.model.CategoryExcel;
+import com.softserve.teachua.dto.database_transfer.model.CenterExcel;
+import com.softserve.teachua.dto.database_transfer.model.ClubExcel;
+import com.softserve.teachua.dto.database_transfer.model.DistrictExcel;
+import com.softserve.teachua.dto.database_transfer.model.LocationExcel;
+import com.softserve.teachua.dto.database_transfer.model.StationExcel;
 import com.softserve.teachua.dto.district.DistrictProfile;
 import com.softserve.teachua.dto.location.LocationProfile;
 import com.softserve.teachua.dto.station.StationProfile;
 import com.softserve.teachua.exception.AlreadyExistException;
+import com.softserve.teachua.exception.NotExistException;
 import com.softserve.teachua.model.Center;
 import com.softserve.teachua.model.City;
-import com.softserve.teachua.model.ExcelCenterEntity;
-import com.softserve.teachua.model.ExcelClubEntity;
-import com.softserve.teachua.repository.ClubRepository;
-import com.softserve.teachua.repository.ExcelCenterEntityRepository;
-import com.softserve.teachua.repository.ExcelClubEntityRepository;
 import com.softserve.teachua.service.CategoryService;
 import com.softserve.teachua.service.CenterService;
 import com.softserve.teachua.service.CityService;
@@ -31,16 +27,15 @@ import com.softserve.teachua.service.DataLoaderService;
 import com.softserve.teachua.service.DistrictService;
 import com.softserve.teachua.service.LocationService;
 import com.softserve.teachua.service.StationService;
-import com.softserve.teachua.service.UserService;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.zip.DataFormatException;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -49,11 +44,8 @@ import org.springframework.stereotype.Service;
 public class DataLoaderServiceImpl implements DataLoaderService {
     private static final long DEFAULT_USER_OWNER_ID = 1L;
     private static final String CENTER_DEFAULT_URL_WEB = "#";
-    private static final String CENTER_DEFAULT_EMAIL = "email@mail.com";
     private static final String DEFAULT_CATEGORY_ICON_URL = "/static/images/categories/other.svg";
     private static final String DEFAULT_CATEGORY_BACKGROUND_COLOR = "#13C2C2";
-    private static final String DEFAULT_CLUB_WORK_TIME = "09:00-16:00";
-    private static final String DEFAULT_CLUB_URL_WEB = "#";
     private static final String DEFAULT_CLUB_URL_LOGO = "#";
     private static final String DEFAULT_CLUB_URL_BACKGROUND = "/static/images/club/bg_2.png";
     private static final String CLUB_DEFAULT_DESCRIPTION = "Опис відсутній";
@@ -75,45 +67,30 @@ public class DataLoaderServiceImpl implements DataLoaderService {
     private final ClubService clubService;
     private final DistrictService districtService;
     private final StationService stationService;
-    private final UserService userService;
     private final CityService cityService;
-    private final ClubRepository clubRepository;
     private final LocationService locationService;
     private final ExcelConvertToFormatStringContactsData contactsConverter;
     private final ExcelConvertToFormatStringContactsData excelContactsConverter;
 
-    private final ExcelCenterEntityRepository excelCenterEntityRepository;
-    private final ExcelClubEntityRepository excelClubEntityRepository;
-
     @Autowired
     public DataLoaderServiceImpl(CategoryService categoryService, CenterService centerService, ClubService clubService,
                                  DistrictService districtService, StationService stationService,
-                                 UserService userService, CityService cityService, ClubRepository clubRepository,
-                                 LocationService locationService,
+                                 CityService cityService, LocationService locationService,
                                  ExcelConvertToFormatStringContactsData contactsConverter,
-                                 ExcelConvertToFormatStringContactsData excelContactsConverter,
-                                 ExcelCenterEntityRepository excelCenterEntityRepository,
-                                 ExcelClubEntityRepository excelClubEntityRepository) {
+                                 ExcelConvertToFormatStringContactsData excelContactsConverter) {
         this.categoryService = categoryService;
         this.centerService = centerService;
         this.clubService = clubService;
         this.districtService = districtService;
         this.stationService = stationService;
-        this.userService = userService;
         this.cityService = cityService;
-        this.clubRepository = clubRepository;
         this.locationService = locationService;
         this.contactsConverter = contactsConverter;
         this.excelContactsConverter = excelContactsConverter;
-        this.excelCenterEntityRepository = excelCenterEntityRepository;
-        this.excelClubEntityRepository = excelClubEntityRepository;
     }
 
     @Override
     public void loadToDatabase(ExcelParsingData excelParsingData) {
-        // todo tmp load data is in parser
-        // loadExcelEntityToDB(excelParsingData);
-
         log.debug("=========LOADING DATA TO DB STEP: all locations form dto =========");
         log.debug(excelParsingData.getLocations().toString());
 
@@ -123,18 +100,8 @@ public class DataLoaderServiceImpl implements DataLoaderService {
         Map<Long, Long> excelIdToDbId = new HashMap<>();
         loadCategories(excelParsingData, categoriesNames);
         loadCenters(excelParsingData, excelIdToDbId);
-        loadClubs(excelParsingData, excelIdToDbId, categoriesNames);
+        loadClubs(excelParsingData, categoriesNames);
         loadLocations(excelParsingData);
-    }
-
-    private void loadExcelEntityToDB(ExcelParsingData excelParsingData) {
-        for (ExcelCenterEntity center : excelParsingData.getExcelCenters()) {
-            excelCenterEntityRepository.save(center);
-        }
-
-        for (ExcelClubEntity club : excelParsingData.getExcelClubs()) {
-            excelClubEntityRepository.save(club);
-        }
     }
 
     private void loadLocations(ExcelParsingData excelParsingData) {
@@ -144,28 +111,7 @@ public class DataLoaderServiceImpl implements DataLoaderService {
         for (LocationExcel location : excelParsingData.getLocations()) {
             log.debug("(row 133, DataLoader : " + location.toString());
             try {
-                String cityName = location.getCity();
-                if (cityName == null || cityName.isEmpty()) {
-                    cityName = "Київ";
-                }
-
-                Long districtIdCheck = null;
-                if (location.getDistrict() != null
-                        && districtService.getOptionalDistrictByName(location.getDistrict()).isPresent()) {
-                    districtIdCheck = districtService.getOptionalDistrictByName(location.getDistrict()).get().getId();
-                }
-
-                Long stationIdCheck = null;
-                if (location.getStation() != null
-                        && stationService.getOptionalStationByName(location.getStation()).isPresent()) {
-                    stationIdCheck = stationService.getOptionalStationByName(location.getStation()).get().getId();
-                }
-
-                LocationProfile locationProfile = LocationProfile.builder().id(location.getId())
-                        .address(location.getAddress()).latitude(location.getLatitude())
-                        .longitude(location.getLongitude()).name(location.getName())
-                        .cityId(cityService.getCityByName(cityName).getId()).districtId(districtIdCheck)
-                        .stationId(stationIdCheck).build();
+                LocationProfile locationProfile = getLocationProfile(location);
                 if (location.getClubExternalId() == null) {
                     locationProfile = locationProfile.withClubId(null);
                     if (location.getCenterExternalId() == null) {
@@ -178,7 +124,7 @@ public class DataLoaderServiceImpl implements DataLoaderService {
                     }
                 } else {
                     log.debug("Review Club Location location.getClubExternalId() = " + location.getClubExternalId());
-                    while (clubService.getClubByClubExternalId(location.getClubExternalId()).size() == 0) {
+                    while (clubService.getClubByClubExternalId(location.getClubExternalId()).isEmpty()) {
                         location.setClubExternalId(location.getClubExternalId() - 1);
                     }
                     locationProfile = locationProfile.withClubId(
@@ -197,6 +143,30 @@ public class DataLoaderServiceImpl implements DataLoaderService {
         }
     }
 
+    private LocationProfile getLocationProfile(LocationExcel location) {
+        String cityName = location.getCity();
+        if (cityName == null || cityName.isEmpty()) {
+            cityName = "Київ";
+        }
+
+        Long districtIdCheck = null;
+        if (StringUtils.isNotEmpty(location.getDistrict())) {
+            districtIdCheck = districtService.getOptionalDistrictByName(location.getDistrict())
+                    .orElseThrow(NotExistException::new).getId();
+        }
+
+        Long stationIdCheck = null;
+        if (StringUtils.isNotEmpty(location.getStation())) {
+            stationIdCheck = stationService.getOptionalStationByName(location.getStation())
+                    .orElseThrow(NotExistException::new).getId();
+        }
+        return LocationProfile.builder().id(location.getId())
+                .address(location.getAddress()).latitude(location.getLatitude())
+                .longitude(location.getLongitude()).name(location.getName())
+                .cityId(cityService.getCityByName(cityName).getId()).districtId(districtIdCheck)
+                .stationId(stationIdCheck).build();
+    }
+
     private void loadCenters(ExcelParsingData excelParsingData, Map<Long, Long> excelIdToDbId) {
         log.debug("======= load_CENTERS DataLoaderService =========");
 
@@ -210,7 +180,7 @@ public class DataLoaderServiceImpl implements DataLoaderService {
                         .centerExternalId(center.getCenterExternalId()).build());
                 excelIdToDbId.put(center.getCenterExternalId(), createdCenter.getId());
             } catch (AlreadyExistException e) {
-                log.error("***###ERROR CENTER to DB: " + center.toString());
+                log.error("***###ERROR CENTER to DB: " + center);
                 log.error("Trying to add already exists center from excel");
             } catch (Exception constraintViolationException) {
                 log.error("Validation in description center: " + center.getCenterExternalId());
@@ -219,37 +189,17 @@ public class DataLoaderServiceImpl implements DataLoaderService {
         }
     }
 
-    private void loadClubs(ExcelParsingData excelParsingData, Map<Long, Long> excelIdToDbId, Set<String> categories) {
+    private void loadClubs(ExcelParsingData excelParsingData, Set<String> categories) {
         log.debug("(row 219, DataLoader) ======= loadClubs DataLoaderService =========");
         for (ClubExcel club : excelParsingData.getClubs()) {
             log.debug(club.toString());
+            if (club.getAgeFrom() == null) {
+                club.setAgeFrom(2);
+                club.setAgeTo(18);
+            }
             try {
-                if (club.getAgeFrom() == null) {
-                    club.setAgeFrom(2);
-                    club.setAgeTo(18);
-                }
-
                 Center center = centerService.getCenterByExternalId(club.getCenterExternalId());
-                Long realCenterId = null;
-
-                if (center != null) {
-                    realCenterId = center.getId();
-                }
-
-                // ******************************* TODO
-
-                ClubProfile clubProfile = ClubProfile.builder().ageFrom(club.getAgeFrom()).ageTo(club.getAgeTo())
-                        .centerId(realCenterId).centerExternalId(club.getCenterExternalId())
-                        .clubExternalId(club.getClubExternalId())
-                        .description(
-                                DESCRIPTION_JSON_LEFT
-                                        + (club.getDescription().isEmpty() ? CLUB_DEFAULT_DESCRIPTION
-                                        : club.getDescription().replace("\"", "''").replace("\\", "/")
-                                        .replace("\n", " ").replace("\r", " "))
-                                        + DESCRIPTION_JSON_RIGHT)
-                        .name(club.getName()).urlBackground(DEFAULT_CLUB_URL_BACKGROUND).urlLogo(DEFAULT_CLUB_URL_LOGO)
-                        .categoriesName(getFullCategoryName(categories, club.getCategories()))
-                        .contacts(contactsConverter.collectAllContactsData(club.getSite(), club.getPhone())).build();
+                ClubProfile clubProfile = getClubProfile(categories, club, center);
                 if (club.getCenterExternalId() == null) {
                     clubProfile = clubProfile.withCenterId(null);
                 } else {
@@ -265,13 +215,32 @@ public class DataLoaderServiceImpl implements DataLoaderService {
 
                 clubService.addClubsFromExcel(clubProfile);
             } catch (AlreadyExistException e) {
-                log.error("***###ERROR Club to DB: " + club.toString());
+                log.error("***###ERROR Club to DB: " + club);
                 log.error(e.getMessage());
             } catch (Exception constraintViolationException) {
                 log.error("Validation in description: " + club.getClubExternalId());
                 log.error(constraintViolationException.getMessage());
             }
         }
+    }
+
+    private ClubProfile getClubProfile(Set<String> categories, ClubExcel club, Center center) {
+        Long realCenterId = null;
+        if (center != null) {
+            realCenterId = center.getId();
+        }
+        return ClubProfile.builder().ageFrom(club.getAgeFrom()).ageTo(club.getAgeTo())
+                .centerId(realCenterId).centerExternalId(club.getCenterExternalId())
+                .clubExternalId(club.getClubExternalId())
+                .description(
+                        DESCRIPTION_JSON_LEFT
+                                + (club.getDescription().isEmpty() ? CLUB_DEFAULT_DESCRIPTION
+                                : club.getDescription().replace("\"", "''").replace("\\", "/")
+                                .replace("\n", " ").replace("\r", " "))
+                                + DESCRIPTION_JSON_RIGHT)
+                .name(club.getName()).urlBackground(DEFAULT_CLUB_URL_BACKGROUND).urlLogo(DEFAULT_CLUB_URL_LOGO)
+                .categoriesName(getFullCategoryName(categories, club.getCategories()))
+                .contacts(contactsConverter.collectAllContactsData(club.getSite(), club.getPhone())).build();
     }
 
     private void loadDistricts(ExcelParsingData excelParsingData) {
@@ -302,7 +271,7 @@ public class DataLoaderServiceImpl implements DataLoaderService {
         return categoriesNames.stream().filter(
                         s -> shortCategoryNames.stream()
                                 .map(String::toLowerCase).anyMatch(b -> s.toLowerCase().contains(b)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void loadCategories(ExcelParsingData excelParsingData, Set<String> categoriesNames) {
