@@ -42,7 +42,6 @@ import jakarta.validation.ValidationException;
 import java.io.UnsupportedEncodingException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.internal.bytebuddy.utility.RandomString;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -112,7 +111,7 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
     @Override
     public User getUserById(Long id) {
         Optional<User> optionalUser = getOptionalUserById(id);
-        if (!optionalUser.isPresent()) {
+        if (optionalUser.isEmpty()) {
             throw new NotExistException(String.format(USER_NOT_FOUND_BY_ID, id));
         }
 
@@ -129,7 +128,7 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
         });
         List<UserResponse> userResponses = users.stream()
                 .map(user -> (UserResponse) dtoConverter.convertToDto(user, UserResponse.class))
-                .collect(Collectors.toList());
+                .toList();
         log.debug("getting users by role name - {}", roleName);
         return userResponses;
     }
@@ -137,7 +136,7 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
     @Override
     public User getUserByEmail(String email) {
         Optional<User> optionalUser = getOptionalUserByEmail(email);
-        if (!optionalUser.isPresent()) {
+        if (optionalUser.isEmpty()) {
             throw new NotExistException(String.format(USER_NOT_FOUND_BY_EMAIL, email));
         }
 
@@ -148,7 +147,7 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
     @Override
     public User getUserByVerificationCode(String verificationCode) {
         Optional<User> optionalUser = getOptionalUserByVerificationCode(verificationCode);
-        if (!optionalUser.isPresent()) {
+        if (optionalUser.isEmpty()) {
             throw new NotExistException(USER_NOT_FOUND_BY_VERIFICATION_CODE);
         }
 
@@ -160,7 +159,7 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
     public List<UserResponse> getListOfUsers() {
         List<UserResponse> userResponses = userRepository.findAll().stream()
                 .map(user -> (UserResponse) dtoConverter.convertToDto(user, UserResponse.class))
-                .collect(Collectors.toList());
+                .toList();
 
         log.debug("getting list of users {}", userResponses);
         return userResponses;
@@ -182,9 +181,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
                 .withRole(roleService.findByName(userProfile.getRoleName()));
 
         String phoneFormat = "38" + user.getPhone();
-        // String Formated = String.format("%s (%s) %s %s %s", phoneFormat.substring(0, 3),
-        // phoneFormat.substring(3, 6), phoneFormat.substring(6, 9), phoneFormat.substring(9, 11),
-        // phoneFormat.substring(11, 13));
 
         user.setPhone(phoneFormat);
 
@@ -255,13 +251,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
         if (!userProfile.getEmail().equals(user.getEmail())) {
             throw new IncorrectInputException(EMAIL_UPDATING_ERROR);
         }
-        /*
-         * Admin must be able to appoint someone else as the admin
-         *
-         * if (userProfile.getRoleName().equals(RoleData.ADMIN.getDBRoleName()) &&
-         * !user.getRole().getName().equals(RoleData.ADMIN.getDBRoleName())) { throw new
-         * IncorrectInputException(ROLE_UPDATING_ERROR); }
-         */
         User newUser = dtoConverter.convertToEntity(userProfile, user).withPassword(user.getPassword()).withId(id)
                 .withRole(roleService.findByName(userProfile.getRoleName())).withPhone(userProfile.getPhone());
 
@@ -327,7 +316,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
         helper.setSubject(subject);
 
         String verifyURL = baseUrl + "/verify?code=" + user.getVerificationCode();
-        // String verifyURL = "http://localhost:3000/dev/verify?code=" + user.getVerificationCode();
         String content = "Шановний/а [[userFullName]]!<br>"
                 + "Для підтвердження Вашої реєстрації, будь ласка, перейдіть за посиланням нижче: \n<br>"
                 + "<h3><a href=\"[[URL]]\" target=\"_self\">Підтвердити реєстрацію</a></h3>" + "Дякуємо!<br>"
@@ -395,7 +383,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
                     + "<h3><a href=\"[[URL]]\" target=\"_self\">Змінити пароль</a></h3>" + "Дякуємо!<br>"
                     + "Ініціатива \"Навчай українською\"";
             String verifyURL = baseUrl + "/verifyreset?code=" + user.getVerificationCode();
-            // String verifyURL = "http://localhost:3000/dev/verifyreset?code=" + user.getVerificationCode();
             content = content.replace("[[userFullName]]", user.getLastName() + " " + user.getFirstName());
             content = content.replace("[[URL]]", verifyURL);
             message.setContent(content, "text/html; charset=UTF-8");
@@ -406,7 +393,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
             log.error(e.getMessage());
         }
 
-        // return dtoConverter.convertToDto(user, SuccessUserPasswordReset.class);
         return null;
     }
 
@@ -424,7 +410,6 @@ public class UserServiceImpl implements UserService, ArchiveMark<User> {
                 .setMessage(String.format("Користувач %s %s верифікований", user.getFirstName(), user.getLastName()));
 
         log.debug("step 2: " + userPasswordReset.getVerificationCode() + " " + userPasswordReset.getEmail());
-        // return userPasswordReset;
         return successVerificationUser;
     }
 
