@@ -68,10 +68,10 @@ public class ResultServiceImpl implements ResultService {
         List<Result> userResults = findResultsByUserId(userId);
         List<Long> groupTestsIds = testService.findAllByGroupId(groupId).stream()
                 .map(Test::getId)
-                .collect(Collectors.toList());
+                .toList();
         List<Result> results = userResults.stream()
                 .filter(result -> groupTestsIds.contains(result.getTest().getId()))
-                .collect(Collectors.toList());
+                .toList();
         List<UserResult> dtoResults = mapToDtoList(results);
         setResultLink(dtoResults);
         return dtoResults;
@@ -84,7 +84,7 @@ public class ResultServiceImpl implements ResultService {
         List<Result> userResults = findResultsByUserId(userId);
         List<Result> results = userResults.stream()
                 .filter(result -> result.getTest().getId().equals(testId))
-                .collect(Collectors.toList());
+                .toList();
         List<UserResult> dtoResults = mapToDtoList(results);
         setResultLink(dtoResults);
         return dtoResults;
@@ -127,24 +127,29 @@ public class ResultServiceImpl implements ResultService {
         for (Map.Entry<Question, List<Answer>> pair : idAnswers.entrySet()) {
             Question question = pair.getKey();
             List<Answer> answers = pair.getValue();
-            int questionGrade = 0;
-
-            if (question.getQuestionType().getTitle().equals("radio")) {
-                for (Answer a : answers) {
-                    if (a.isCorrect() && selectedAnswers.contains(a)) {
-                        questionGrade += a.getValue();
-                    }
-                }
-            } else if (question.getQuestionType().getTitle().equals("checkbox")) {
-                for (Answer a : answers) {
-                    boolean answerIsCorrect = a.isCorrect();
-                    int value = a.getValue();
-                    questionGrade += answerIsCorrect ? value : -value;
-                }
-            }
+            int questionGrade = getQuestionGrade(selectedAnswers, question, answers);
             grade += Math.max(questionGrade, 0);
         }
         return grade;
+    }
+
+    private int getQuestionGrade(List<Answer> selectedAnswers, Question question, List<Answer> answers) {
+        int questionGrade = 0;
+
+        if (question.getQuestionType().getTitle().equals("radio")) {
+            for (Answer a : answers) {
+                if (a.isCorrect() && selectedAnswers.contains(a)) {
+                    questionGrade += a.getValue();
+                }
+            }
+        } else if (question.getQuestionType().getTitle().equals("checkbox")) {
+            for (Answer a : answers) {
+                boolean answerIsCorrect = a.isCorrect();
+                int value = a.getValue();
+                questionGrade += answerIsCorrect ? value : -value;
+            }
+        }
+        return questionGrade;
     }
 
     @Override
@@ -216,6 +221,6 @@ public class ResultServiceImpl implements ResultService {
     private List<UserResult> mapToDtoList(List<Result> results) {
         return results.stream()
                 .map(result -> modelMapper.map(result, UserResult.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
