@@ -1,11 +1,13 @@
 package com.softserve.teachua.tools.repository;
 
 import com.softserve.teachua.dto.task.TaskProfile;
-import java.util.Arrays;
 import java.util.List;
 
 public class TaskInfoRepository {
+    private TaskInfoRepository() {
+    }
+
     public static List<TaskProfile> getTasksList() {
-        return Arrays.asList();
+        return List.of();
     }
 }
